--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Akanksha | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <img src="https://via.placeholder.com/150" alt="Profile Image">
+        <h1>Hi, I'm Akanksha 👋</h1>
+        <p>Web Development Intern | Front-End Learner</p>
+    </header>
+
+    <!-- About Section -->
+    <section class="about">
+        <h2>About Me</h2>
+        <p>
+            I am a beginner web developer learning HTML and CSS.
+            I enjoy building clean and user-friendly websites.
+        </p>
+    </section>
+
+    <!-- Skills Section -->
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Basic JavaScript</li>
+            <li>Responsive Design</li>
+            <li>App Development</li>
+            <li>UI/UX</li>
+            <li>Java</li>
+
+        </ul>
+    </section>
+
+    <!-- Links Section -->
+    <section class="links">
+        <h2>Connect With Me</h2>
+
+        <div class="link-card">
+            <h3>LinkedIn</h3>
+            <a href="https://www.linkedin.com/in/akanksha-maurya-638173344/" target="_blank">
+                https://www.linkedin.com/in/akanksha-maurya-638173344/
+            </a>
+        </div>
+
+        <div class="link-card">
+            <h3>GitHub</h3>
+            <a href="https://github.com/Akanksha22106" target="_blank">
+                github.com/Akanksha22106
+            </a>
+        </div>
+
+
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects">
+        <h2>Projects</h2>
+
+        <div class="project-card">
+            <h3>Landing Page</h3>
+            <p>Simple landing page created using HTML and CSS.</p>
+            <a href="https://akanksha22106.github.io/OIBSIP/">Live Project</a>
+        </div>
+
+        <div class="project-card">
+            <h3>Temperature Converter</h3>
+            <p>Converts temperature between Celsius and Fahrenheit.</p>
+            <a href="https://akanksha22106.github.io/OIBSIP/temp/">Live Project</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2026 Akanksha. All Rights Reserved.</p>
+    </footer>
+
+</body>
+
+</html>
